packages/typ/tests/fixtures/diagnostics/0901_gadt_constructor_payload_int_mismatch_05.ml.expected
File "0901_gadt_constructor_payload_int_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0901_gadt_constructor_payload_int_mismatch_05 is not a valid module name.

File "0901_gadt_constructor_payload_int_mismatch_05.ml", line 5, characters 40-44:
5 | let _ : int expr_epsilon = EInt_epsilon true
                                            ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
