packages/typ/tests/fixtures/diagnostics/0901_gadt_constructor_payload_int_mismatch_05.ml
type _ expr_epsilon =
  | EInt_epsilon : int -> int expr_epsilon
  | EBool_epsilon : bool -> bool expr_epsilon

let _ : int expr_epsilon = EInt_epsilon true
